--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -50,4 +50,12 @@
         android:layout_marginEnd="92dp"
         android:onClick="activityNavigationTab"
         android:text="Navigation TAb" />
+
+    <Button
+        android:id="@+id/button7"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="92dp"
+        android:onClick="activityRecyclerView"
+        android:text="Recycler View" />
 </LinearLayout>
