change layout id to description

--- a/app/src/main/res/layout/content_recyclerview_item_image.xml
+++ b/app/src/main/res/layout/content_recyclerview_item_image.xml
@@ -21,7 +21,7 @@
         tools:layout_editor_absoluteY="0dp" />
 
     <TextView
-        android:id="@+id/text_id"
+        android:id="@+id/text_description"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
         android:layout_marginStart="8dp"
