--- a/app/src/main/res/layout/activity_content_recycler_scrollview.xml
+++ b/app/src/main/res/layout/activity_content_recycler_scrollview.xml
@@ -25,8 +25,7 @@
             android:layout_marginTop="8dp"
             android:background="#f6f8fa"
             android:scrollbars="vertical"
-            app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
-            tools:layout_editor_absoluteX="0dp" />
+            app:layout_constraintTop_toBottomOf="@+id/relativeLayout"/>
     </android.support.constraint.ConstraintLayout>
 
 </android.support.v4.widget.NestedScrollView>
