--- a/app/src/main/res/layout/content_firebase.xml
+++ b/app/src/main/res/layout/content_firebase.xml
@@ -8,42 +8,9 @@
     tools:context=".FirebaseActivity"
     tools:showIn="@layout/activity_firebase">
 
-    <Button
-        android:id="@+id/button_service"
+    <TextView
+        android:id="@+id/text_firebase"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Start Service"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="16dp" />
-
-    <EditText
-        android:id="@+id/token"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:hint="Token"
-        android:inputType="textPersonName"
-        app:layout_constraintTop_toBottomOf="@+id/button_service"
-        tools:layout_editor_absoluteX="16dp" />
-
-    <EditText
-        android:id="@+id/message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:hint="Message"
-        android:inputType="textPersonName"
-        app:layout_constraintTop_toBottomOf="@+id/token"
-        tools:layout_editor_absoluteX="15dp" />
-
-    <Button
-        android:id="@+id/btn_send"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Send"
-        app:layout_constraintTop_toBottomOf="@+id/message"
-        tools:layout_editor_absoluteX="16dp" />
+        android:text="TextView" />
 </android.support.constraint.ConstraintLayout>
